--- a/src/containers/pageWithHeader/style.sass
+++ b/src/containers/pageWithHeader/style.sass
@@ -26,11 +26,21 @@
             .headerTitle
                 display: flex
                 flex-direction: column
-                align-items: center
+                align-items: flex-end
                 justify-content: center
-                height: 100%
+                height: 30px
                 padding-left: 20px
                 font-size: 30px
+                margin-right: 5px
+
+            .headerSubtitle
+                height: 30px
+                font-size: 20px
+                line-height: 21px
+                display: flex
+                flex-direction: column
+                align-items: flex-end
+                justify-content: flex-end
 
     .body
         width: 100%
