--- a/src/pages/mail/style.sass
+++ b/src/pages/mail/style.sass
@@ -3,13 +3,114 @@
     height: 100%
     padding: 30px
     display: flex
-    flex-direction: row
+    flex-direction: column
     align-items: flex-start
     justify-content: flex-start
 
-    .welcomeSlogan
-        font-size: 40px
-        padding: 30px
+    .mailActions
+        display: flex
+        align-items: center
+        justify-content: space-between
+        width: 100%
+        margin-bottom: 20px
+
+        .buttons
+            height: 100%
+            display: flex
+            align-items: center
+
+.messageComponent
+    margin-bottom: 10px
+    padding-left: 5px
+    display: flex
+    height: 80px
+    overflow: hidden
+    transition: padding
+
+    .deleteMessage
         display: flex
         align-items: center
         justify-content: center
+        cursor: pointer
+        height: 100%
+        width: 100px
+        margin-left: -100px
+
+    .messageContainer
+        cursor: pointer
+        margin-right: 5px
+        display: flex
+        align-items: center
+        justify-content: center
+        height: 100%
+        width: 100%
+
+        .redirect
+            height: 100%
+            display: flex
+
+    .example-appear
+        opacity: 0.01
+
+        &.example-appear-active
+            opacity: 1
+
+    .messageContent
+        display: flex
+        height: 50px
+
+        .indicator
+            height: 100%
+            width: 10px
+            margin-right: 10px
+            display: flex
+            flex-direction: column
+            align-items: center
+            justify-content: space-between
+
+            .readPoint
+                width: 10px
+                height: 10px
+                border-radius: 50%
+                background-color: red
+
+            .importantPoint
+                width: 10px
+                height: 10px
+                border-radius: 50%
+                background-color: green
+
+        .checkboxContainer
+            height: 100%
+            margin-right: 10px
+            display: flex
+            align-items: center
+            justify-content: center
+
+        .image
+            height: 100%
+            margin-right: 10px
+            display: flex
+            align-items: center
+            justify-content: center
+
+        .messageInfo
+            margin-right: 20px
+            display: flex
+            flex-direction: column
+            align-items: flex-start
+            justify-content: space-around
+
+            .messageMeta, .messageText
+                display: flex
+
+                .date
+                    font-size: 14px
+                    color: grey
+
+                .title
+                    font-size: 16px
+                    margin-right: 10px
+
+                .text
+                    font-size: 14px
