--- a/src/pages/auth/style.sass
+++ b/src/pages/auth/style.sass
@@ -16,17 +16,14 @@
             align-items: center
             justify-content: center
 
-            .title
+            &_title
                 font-size: 30px
                 margin-bottom: 50px
                 margin-top: 10px
 
-            .input
-                display: flex
-                align-items: center
-                justify-content: center
-                width: 90%
-                margin-bottom: 10px
+            &_input
+                width: 80%
+                margin-bottom: 15px
 
-            .button
+            &_button
                 margin-bottom: 10px
