--- a/src/pages/mail/style.sass
+++ b/src/pages/mail/style.sass
@@ -19,13 +19,20 @@
             display: flex
             align-items: center
 
+.messagesInnerArea
+    width: 100%
+    padding-top: 10px
+    padding-bottom: 10px
+
 .messageComponent
-    margin-bottom: 10px
+    width: 100%
+    margin-bottom: 5px
     padding-left: 5px
     display: flex
-    height: 80px
+    height: 60px
+    will-change: padding-left
+    transition: padding-left 0.2s ease
     overflow: hidden
-    transition: padding
 
     .deleteMessage
         display: flex
@@ -47,17 +54,13 @@
 
         .redirect
             height: 100%
+            width: 100%
             display: flex
-
-    .example-appear
-        opacity: 0.01
-
-        &.example-appear-active
-            opacity: 1
 
     .messageContent
         display: flex
         height: 50px
+        padding: 10px
 
         .indicator
             height: 100%
@@ -89,13 +92,13 @@
 
         .image
             height: 100%
+            font-size: 20px
             margin-right: 10px
             display: flex
             align-items: center
             justify-content: center
 
         .messageInfo
-            margin-right: 20px
             display: flex
             flex-direction: column
             align-items: flex-start
@@ -113,4 +116,8 @@
                     margin-right: 10px
 
                 .text
+                    max-width: 700px
                     font-size: 14px
+                    overflow: hidden
+                    text-overflow: ellipsis
+                    white-space: nowrap
