--- a/src/pages/settings/style.sass
+++ b/src/pages/settings/style.sass
@@ -1,38 +1,4 @@
 
-.passwordChange[data-open=close]
-    animation: close 1s
-    display: none
-    max-height: 500px
-    overflow: hidden
-    font-size: 15px
-    margin-top: 20px
-
-.passwordChange[data-open=open]
-    animation: open 1s
-    font-size: 15px
-    margin-top: 20px
-    display: block
-    heihgt: auto
-    max-height: 500px
-
-@keyframes open
-    from
-        display: none
-        max-height: 0
-
-    to
-        display: block
-        max-height: auto
-
-@keyframes close
-    from
-        display: block
-        max-height: auto
-
-    to
-        display: none
-        height: 0
-
 .settingsBody
     width: 100%
     padding: 30px
@@ -42,27 +8,37 @@
     flex-wrap: wrap
 
     .settingsItem
-        width: 60%
+        width: 100%
+        max-width: 50%
+        min-width: 500px
         font-size: 23px
         padding: 20px
         display: flex
         align-items: flex-start
         justify-content: center
 
-        #theme, #language, #reset, .passordChangeHeader
+        #theme, #language, #reset,
             width: 100%
             display: flex
             align-items: center
             justify-content: space-between
 
-            .passwordChange
-                height: 0
+        .passwordChangeHeader
+            width: 100%
+            display: flex
+            align-items: center
+            justify-content: space-between
+            cursor: pointer
 
         .passwordChange
+            overflow: hidden
+            will-change: max-height
+            transition: max-height 0.2s ease
 
             &-input
-                height: 50px
+                font-size: 17px
+                margin-bottom: 10px
 
 .chevronIcon
-    cursor: pointer
-    transition: all .3s ease-in
+    will-change: transform
+    transition: transform .2s ease
