--- a/src/containers/tabs/style.sass
+++ b/src/containers/tabs/style.sass
@@ -1,2 +1,8 @@
 .ui-tabs
     width: 100%
+
+    &_tabsContainer
+        width: 100%
+        display: flex
+        margin-bottom: 20px
+        border-bottom: 2px solid gray
