--- a/src/pages/mail/style.sass
+++ b/src/pages/mail/style.sass
@@ -12,12 +12,26 @@
         align-items: center
         justify-content: space-between
         width: 100%
-        margin-bottom: 20px
+        margin-bottom: 45px
 
         .buttons
             height: 100%
             display: flex
             align-items: center
+
+.tab
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: center
+    padding-left: 10px
+    padding-right: 10px
+    padding-bottom: 7px
+    cursor: pointer
+
+    & span
+        font-size: 15px
+        padding-right: 7px
 
 .messagesInnerArea
     width: 100%
