--- a/src/pages/messageCheck/style.sass
+++ b/src/pages/messageCheck/style.sass
@@ -1,1 +1,18 @@
-.messagePage-container
+.messagePage
+    width: 100%
+    padding-left: 20px
+    padding-right: 20px
+
+    &-buttons
+        padding-top: 30px
+        margin-bottom: 20px
+
+    &-body
+        padding: 10px
+        font-size: 20px
+
+        & div
+            padding-bottom: 15px
+
+span
+    color: grey
