--- a/src/containers/card/style.sass
+++ b/src/containers/card/style.sass
@@ -1,6 +1,7 @@
 .ui-card
     padding: 3px
-    border: 1px solid rgba(0,0,0, 0.15)
+    border: 1px solid gray
+    //rgba(0,0,0, 0.15)
     border-radius: 5px
     width: 100%
     heidght: 100%
