--- a/src/containers/pageWithHeader/style.sass
+++ b/src/containers/pageWithHeader/style.sass
@@ -56,7 +56,7 @@
         height: 100vh
         position: fixed
         overflow: hidden
-        background-color: #333
+        background-color: #222
         color: white
         will-change: max-width
         transition: max-width 0.3s ease
@@ -66,7 +66,7 @@
             cursor: pointer
 
             &:hover
-                background-color: rgba(3,3,3,0.1)
+                background-color: rgba(51, 51, 51, 0.3)
 
             &__title
                 height: 50px
@@ -99,7 +99,9 @@
 
         .header
             width: 100%
-            height: 7%
+            height: 7vh
+            z-index: 100
+            position: fixed
             box-shadow: 0 0 7px rgba(0,0,0,0.4)
 
             .headerContent
@@ -139,4 +141,5 @@
 
         .body
             width: 100%
-            min-height: 93%
+            padding-top: 7vh
+            min-height: 100vh
