--- a/src/pages/mail/style.sass
+++ b/src/pages/mail/style.sass
@@ -33,6 +33,10 @@
         font-size: 15px
         padding-right: 7px
 
+.emptyMessage
+    width: 100%
+    text-align: center
+
 .messagesInnerArea
     width: 100%
     padding-top: 10px
@@ -48,11 +52,15 @@
     transition: padding-left 0.2s ease
     overflow: hidden
 
+    &:hover
+        padding-bottom: 3px
+
     .deleteMessage
         display: flex
         align-items: center
         justify-content: center
         cursor: pointer
+        font-size: 13px
         height: 100%
         width: 100px
         margin-left: -100px
