--- a/src/pages/messageCheck/style.sass
+++ b/src/pages/messageCheck/style.sass
@@ -8,8 +8,9 @@
         margin-bottom: 20px
 
     &-body
-        padding: 10px
+        padding: 20px
         font-size: 20px
+        line-height: 25px
 
         & div
             padding-bottom: 15px
