--- a/src/pages/mail/style.sass
+++ b/src/pages/mail/style.sass
@@ -48,9 +48,10 @@
     padding-left: 5px
     display: flex
     height: 60px
-    will-change: padding-left
-    transition: padding-left 0.2s ease
+    will-change: opacity
+    transition: opacity 0.5s ease
     overflow: hidden
+    opacity: 0
 
     &:hover
         padding-bottom: 3px
@@ -66,6 +67,8 @@
         margin-left: -100px
 
     .messageContainer
+        will-change: padding-left
+        transition: padding-left 0.2s ease
         cursor: pointer
         margin-right: 5px
         display: flex
