--- a/src/index.sass
+++ b/src/index.sass
@@ -6,3 +6,9 @@ body
 
 code
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
+
+.animate__animated.animate__fadeIn 
+  --animate-duration: 0.2s
+
+.animate__animated.animate__fadeOut
+  --animate-duration: 0.2s
