--- a/src/pages/mail/style.sass
+++ b/src/pages/mail/style.sass
@@ -42,6 +42,12 @@
     padding-top: 10px
     padding-bottom: 10px
 
+.messagesPagination
+    width: 100%
+    height: 50px
+    padding-left: 10px
+    padding-right: 10px
+
 .messageComponent
     width: 100%
     margin-bottom: 5px
