--- a/src/pages/mail/style.sass
+++ b/src/pages/mail/style.sass
@@ -39,8 +39,7 @@
 
 .messagesInnerArea
     width: 100%
-    padding-top: 10px
-    padding-bottom: 10px
+    padding: 10px
 
 .messagesPagination
     width: 100%
@@ -48,19 +47,24 @@
     padding-left: 10px
     padding-right: 10px
 
-.messageComponent
-    width: 100%
-    margin-bottom: 5px
-    padding-left: 5px
-    display: flex
-    height: 60px
-    will-change: opacity
-    transition: opacity 0.5s ease
-    overflow: hidden
-    opacity: 0
+.messageComponent-hover
+    width: 100% 
+    height: 65px
+    will-change: padding-top
+    transition: padding-top 0.2s ease
 
     &:hover
         padding-bottom: 3px
+
+.messageComponent
+    width: 100%
+    display: flex
+    overflow-x: hidden
+    height: 100%
+    padding: 5px
+    will-change: opacity, padding-left
+    transition: all 0.2s ease
+    opacity: 0
 
     .deleteMessage
         display: flex
@@ -73,10 +77,8 @@
         margin-left: -100px
 
     .messageContainer
-        will-change: padding-left
-        transition: padding-left 0.2s ease
+        padding-left: 5px
         cursor: pointer
-        margin-right: 5px
         display: flex
         align-items: center
         justify-content: center
@@ -123,7 +125,7 @@
 
         .image
             height: 100%
-            font-size: 20px
+            font-size: 9px
             margin-right: 10px
             display: flex
             align-items: center
