--- a/src/index.sass
+++ b/src/index.sass
@@ -7,8 +7,8 @@ body
 code
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
 
-.animate__animated.animate__fadeIn 
-  --animate-duration: 0.2s
+.animate__animated.animate__fadeInRightBig 
+  --animate-duration: 0.4s
 
-.animate__animated.animate__fadeOut
-  --animate-duration: 0.2s
+.animate__animated.animate__fadeOutRightBig
+  --animate-duration: 0.7s
