--- a/src/pages/mail/style.sass
+++ b/src/pages/mail/style.sass
@@ -39,7 +39,7 @@
 
 .messagesInnerArea
     width: 100%
-    padding: 10px
+    padding: 5px
 
 .messagesPagination
     width: 100%
@@ -49,19 +49,20 @@
 
 .messageComponent-hover
     width: 100% 
-    height: 65px
-    will-change: padding-top
-    transition: padding-top 0.2s ease
+    height: 60px
+    padding-left: 0px
+    will-change: padding-left
+    transition: padding-left 0.1s ease
 
     &:hover
-        padding-bottom: 3px
+        padding-left: 5px
 
 .messageComponent
     width: 100%
     display: flex
     overflow-x: hidden
-    height: 100%
-    padding: 5px
+    height: 98%
+    padding: 3px
     will-change: opacity, padding-left
     transition: all 0.2s ease
     opacity: 0
@@ -85,15 +86,11 @@
         height: 100%
         width: 100%
 
-        .redirect
-            height: 100%
-            width: 100%
-            display: flex
-
     .messageContent
+        overflow: hidden
         display: flex
         height: 50px
-        padding: 10px
+        padding: 3px
 
         .indicator
             height: 100%
@@ -122,35 +119,44 @@
             display: flex
             align-items: center
             justify-content: center
-
-        .image
+        
+        .redirect
             height: 100%
-            font-size: 9px
-            margin-right: 10px
+            flex-grow: 1
             display: flex
-            align-items: center
-            justify-content: center
+            overflow-x: hidden
 
-        .messageInfo
-            display: flex
-            flex-direction: column
-            align-items: flex-start
-            justify-content: space-around
-
-            .messageMeta, .messageText
+            .image
+                height: 100%
+                font-size: 9px
+                margin-right: 10px
                 display: flex
+                align-items: center
+                justify-content: center
 
-                .date
-                    font-size: 14px
-                    color: grey
+            .messageInfo
+                overflow-x: hidden
+                display: flex
+                flex-direction: column
+                align-items: flex-start
+                justify-content: space-around
 
-                .title
-                    font-size: 16px
-                    margin-right: 10px
+                .messageMeta, .messageText
+                    display: flex
+                    overflow-x: hidden
+                    width: 100%
 
-                .text
-                    max-width: 700px
-                    font-size: 14px
-                    overflow: hidden
-                    text-overflow: ellipsis
-                    white-space: nowrap
+                    .date
+                        font-size: 14px
+                        color: grey
+
+                    .title
+                        font-size: 16px
+                        margin-right: 10px
+
+                    .text
+                        flex-grow: 1
+                        font-size: 14px
+                        overflow-x: hidden
+                        text-overflow: ellipsis
+                        white-space: nowrap
