--- a/src/pages/mail/style.sass
+++ b/src/pages/mail/style.sass
@@ -49,7 +49,7 @@
 
 .messageComponent-hover
     width: 100% 
-    height: 60px
+    height: 65px
     padding-left: 0px
     will-change: padding-left
     transition: padding-left 0.1s ease
@@ -61,7 +61,7 @@
     width: 100%
     display: flex
     overflow-x: hidden
-    height: 98%
+    height: 100%
     padding: 3px
     will-change: opacity, padding-left
     transition: all 0.2s ease
@@ -89,12 +89,12 @@
     .messageContent
         overflow: hidden
         display: flex
-        height: 50px
+        height: 55px
         padding: 3px
 
         .indicator
             height: 100%
-            width: 10px
+            min-width: 10px
             margin-right: 10px
             display: flex
             flex-direction: column
