--- a/src/pages/mail/style.sass
+++ b/src/pages/mail/style.sass
@@ -153,6 +153,11 @@
                     .title
                         font-size: 16px
                         margin-right: 10px
+                        overflow-y: hidden
+                        min-width: 50px
+
+                        strong
+                            line-height: 5px
 
                     .text
                         flex-grow: 1
