add adaptive layout

--- a/src/containers/pageWithHeader/style.sass
+++ b/src/containers/pageWithHeader/style.sass
@@ -1,54 +1,3 @@
-.icon_header
-    min-height: 70px
-
-#nav-icon4
-    display: flex
-    flex-direction: column
-    align-items: flex-start
-    justify-content: center
-    width: 30px
-    height: 30px
-    position: relative
-    cursor: pointer
-
-    & span
-        display: block
-        position: absolute
-        height: 3px
-        width: 30px
-        background-color: white
-        border-radius: 15px
-        opacity: 1
-        left: 0
-        will-change: top, left, opacity, transform
-        transition: .15s ease-in-out
-
-    & span:nth-child(1)
-        top: 0px
-        transform-origin: left center
-
-    & span:nth-child(2)
-        top: 11px
-        transform-origin: left center
-
-    & span:nth-child(3)
-        top: 22px
-        transform-origin: left center
-
-    &.open span:nth-child(1)
-        transform: rotate(45deg)
-        top: 0px
-        left: 3px
-
-    &.open span:nth-child(2)
-        width: 0%
-        opacity: 0
-
-    &.open span:nth-child(3)
-        transform: rotate(-45deg)
-        top: 21px
-        left: 3px
-
 .drawer
     width: 100%
     height: 100vh
@@ -56,6 +5,7 @@
     .staticElements
         height: 7vh
         width: 100%
+        min-width: 450px
         display: flex
         position: fixed
         z-index: 8000 !important
@@ -64,12 +14,12 @@
             flex-grow: 1
             height: 7vh
             box-shadow: 0 0 7px rgba(0,0,0,0.4)
+            display: flex
             
             .headerContent
                 display: flex
                 align-items: center
                 justify-content: space-between
-                padding-left: 20px
                 padding-right: 20px
                 width: 100%
                 height: 100%
@@ -123,13 +73,21 @@
                     align-items: flex-end
                     justify-content: flex-end
 
+    .pageWithHeader
+        height: 100vh
+        width: 100% 
+        padding-top: 7vh
+        display: flex
+
         .sidebar
+            position: fixed
             background-color: #222
             color: white
             will-change: max-width
             transition: max-width 0.3s ease
             overflow: hidden
             height: 100vh
+            z-index: 7000 !important
 
             .sidebar-item
                 display: flex
@@ -142,7 +100,6 @@
                     height: 50px
                     min-width: 150px
                     padding-right: 15px
-                    font-size: 18px
                     display: flex
                     flex-direction: column
                     align-items: flex-start
@@ -161,12 +118,19 @@
                 .icon_head
                     height: 70px
 
-    .pageWithHeader
-        height: 100vh
-        width: 100% 
-        padding-left: 70px
-        padding-top: 7vh
-
         .body
             width: 100%
             min-height: 93vh
+
+@media (max-width: 1920px)
+    .sidebar-item__title
+        font-size: 18px
+    .body
+        padding-left: 70px
+
+@media (max-width: 500px) 
+    .sidebar-item__title
+        font-size: 16px
+    .body
+        padding-left: 0px
+    
