--- a/src/pages/main/style.sass
+++ b/src/pages/main/style.sass
@@ -8,7 +8,6 @@
     justify-content: flex-start
 
     .welcomeSlogan
-        font-size: 40px
         padding: 10px
         display: flex
         align-items: center
@@ -16,19 +15,35 @@
 
     .helloWorld
         width: 100%
-        margin-bottom: 30px
 
     .mainInformation
         width: 100%
         display: flex
         justify-content: space-between
+        flex-wrap: wrap
 
         .infoBlock
             width: 49%
 
-            .newMessages, .visitors
-                font-size: 20px
-
             .infoTitle
                 margin-bottom: 15px
-                font-size: 30px
+
+@media (max-width: 1920px)
+    .welcomeSlogan
+        font-size: 40px
+    .newMessages, .visitors
+        font-size: 20px
+    .infoTitle
+        font-size: 30px
+    .helloWorld
+        margin-bottom: 30px
+
+@media (max-width: 500px)
+    .welcomeSlogan
+        font-size: 25px
+    .newMessages, .visitors
+        font-size: 13px
+    .infoTitle
+        font-size: 20px
+    .helloWorld
+        margin-bottom: 20px
