--- a/src/containers/pageWithHeader/style.sass
+++ b/src/containers/pageWithHeader/style.sass
@@ -12,7 +12,6 @@
 
         .header
             flex-grow: 1
-            height: 7vh
             box-shadow: 0 0 7px rgba(0,0,0,0.4)
             display: flex
             
@@ -61,7 +60,6 @@
                     justify-content: center
                     height: 30px
                     padding-left: 20px
-                    font-size: 30px
                     margin-right: 5px
 
                 .headerSubtitle
@@ -76,7 +74,6 @@
     .pageWithHeader
         height: 100vh
         width: 100% 
-        padding-top: 7vh
         display: flex
 
         .sidebar
@@ -121,14 +118,27 @@
         .body
             width: 100%
             min-height: 93vh
+            overflow-y: scroll
 
 @media (max-width: 1920px)
+    .pageWithHeader
+        padding-top: 7vh
+    .header
+        height: 7vh
+    .headerTitle
+        font-size: 30px
     .sidebar-item__title
         font-size: 18px
     .body
         padding-left: 70px
 
 @media (max-width: 500px) 
+    .pageWithHeader
+        padding-top: 8vh
+    .header
+        height: 8vh
+    .headerTitle
+        font-size: 22px
     .sidebar-item__title
         font-size: 16px
     .body
