--- a/src/containers/tabs/style.sass
+++ b/src/containers/tabs/style.sass
@@ -1,8 +1,11 @@
 .ui-tabs
     width: 100%
-
+    margin-bottom: 30px
+    
     &_tabsContainer
         width: 100%
         display: flex
+        flex-wrap: wrap
         margin-bottom: 20px
         border-bottom: 2px solid gray
+        
