--- a/src/pages/mail/style.sass
+++ b/src/pages/mail/style.sass
@@ -1,7 +1,6 @@
 .mailBody
     width: 100%
     height: 100%
-    padding: 30px
     display: flex
     flex-direction: column
     align-items: flex-start
@@ -9,14 +8,17 @@
 
     .mailActions
         display: flex
+        flex-direction: row-reverse
+        flex-wrap: wrap
         align-items: center
         justify-content: space-between
         width: 100%
         margin-bottom: 45px
 
         .buttons
-            height: 100%
+            height: 100% 
             display: flex
+            flex-wrap: wrap
             align-items: center
 
 .tab
@@ -27,11 +29,15 @@
     padding-left: 10px
     padding-right: 10px
     padding-bottom: 7px
+    margin-top: 10px
     cursor: pointer
 
     & span
-        font-size: 15px
         padding-right: 7px
+
+.tabMessagesCounter
+    border-radius: 7px
+    background-color: rgba(0,0,0, 0.2)
 
 .emptyMessage
     width: 100%
@@ -51,11 +57,6 @@
     width: 100% 
     height: 65px
     padding-left: 0px
-    will-change: padding-left
-    transition: padding-left 0.1s ease
-
-    &:hover
-        padding-left: 5px
 
 .messageComponent
     width: 100%
@@ -65,7 +66,6 @@
     padding: 3px
     padding-left: 0px
     will-change: opacity, padding-left
-    transition: padding-left .2s ease
     animation: fade_in .5s
 
     .deleteMessage
@@ -129,7 +129,6 @@
 
             .image
                 height: 100%
-                font-size: 9px
                 margin-right: 10px
                 display: flex
                 align-items: center
@@ -148,11 +147,10 @@
                     width: 100%
 
                     .date
-                        font-size: 14px
                         color: grey
+                        min-width: 100px
 
                     .title
-                        font-size: 16px
                         margin-right: 10px
                         overflow-y: hidden
                         min-width: 50px
@@ -162,7 +160,6 @@
 
                     .text
                         flex-grow: 1
-                        font-size: 14px
                         overflow-x: hidden
                         text-overflow: ellipsis
                         white-space: nowrap
@@ -174,3 +171,50 @@
         opacity: 0
     100%
         opacity: 1
+
+@media (max-width: 1920px) 
+    .messageComponent
+        transition: padding-left .2s ease
+    .messageComponent-hover
+        will-change: padding-left
+        transition: padding-left 0.1s ease
+
+        &:hover
+            padding-left: 5px
+
+    .tabMessagesCounter
+        font-size: 13px
+        padding: 5px
+    .tab span
+        font-size: 15px
+    .mailBody
+        padding: 30px
+    .image
+        font-size: 9px
+    .date
+        font-size: 14px
+    .title 
+        font-size: 16px
+    .text
+        font-size: 14px
+
+@media (max-width: 500px) 
+    .messageComponent-hover:hover
+        padding-left: 0px
+    .search
+        width: 100%
+    .tabMessagesCounter
+        font-size: 13px
+        padding: 3px
+    .tab span
+        font-size: 13px
+    .mailBody
+        padding: 10px
+    .image
+        font-size: 8px
+    .date
+        font-size: 11px
+    .title 
+        font-size: 14px
+    .text
+        font-size: 12px
