--- a/src/pages/projects/style.sass
+++ b/src/pages/projects/style.sass
@@ -1,13 +1,9 @@
-.projectAddForm
-    
-
-    .ProjectFormField
+.ProjectFormField
         margin-bottom: 15px
 
 .projectsBody
     width: 100%
     height: 100%
-    padding: 30px
     display: flex
     flex-direction: row
     align-items: flex-start
@@ -16,23 +12,44 @@
     .projectsTitle
         display: flex
         align-items: center
-        font-size: 30px
         height: 50px
 
     .projectsActions
-        height: 70px
         display: flex
+        flex-direction: row-reverse
+        flex-wrap: wrap
         align-items: center
         justify-content: space-between
 
+        .searchProjects
+            margin-bottom: 15px
+
         .projectsButtons
             display: flex
+            flex-wrap: wrap
 
             .crudButton
                 display: flex
                 align-items: center
                 margin-right: 10px
+                margin-bottom: 10px
 
                 & p
                     margin-right: 20px
                     font-size: 20px
+
+@media (max-width: 1920px)
+    .projectsBody
+        padding: 30px
+    .searchProjects
+        width: auto
+    .projectsTitle
+        font-size: 30px
+
+@media (max-width: 500px)
+    .projectsBody
+        padding: 15px
+    .searchProjects
+        width: 100%
+    .projectsTitle
+        font-size: 25px
