--- a/src/pages/mail/style.sass
+++ b/src/pages/mail/style.sass
@@ -57,6 +57,7 @@
     width: 100% 
     height: 65px
     padding-left: 0px
+    transition: all 1s ease
 
 .messageComponent
     width: 100%
@@ -66,7 +67,7 @@
     padding: 3px
     padding-left: 0px
     will-change: opacity, padding-left
-    animation: fade_in .5s
+    animation: fade_in .4s
 
     .deleteMessage
         display: flex
