--- a/src/pages/projects/style.sass
+++ b/src/pages/projects/style.sass
@@ -20,7 +20,9 @@
         flex-wrap: wrap
         align-items: center
         justify-content: space-between
-
+        margin-top: 20px
+        margin-bottom: 10px
+        
         .searchProjects
             margin-bottom: 15px
 
